ffmpeg: Enable compute_edt only when the subtitles are used for a output stream instead of a filter

Fixes/works around Ticket3768

Reviewed-by: Nicolas George <george@nsup.org>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>